--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,16 @@
 *.exe
 *.out
 *.app
+
+#JetBrains
+.idea
+
+#Additional development files
+lib/
+
+#CMake
+CMakeCache.txt
+CMakeFiles
+*.cbp
+cmake_install.cmake
+Makefile
